test/captureClassicalOpAssign2_2.slq
// args: --run

def main(){
	xs:=[0];
	def foo(){
		xs~=[1];
		return xs;
	}
	return xs; // error
}
